fixed data undefined error, apparently forgot to wrap nodes with braces when defining the props. also addressed some issues highlighted by lighthouse

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,7 +30,7 @@
 
 .project-tag {
   @apply inline-block;
-  @apply bg-gray-200;
+  @apply bg-gray-300;
   @apply rounded-full;
   @apply px-3;
   @apply py-1;
